# BanP

./: Makefile  background.js  manifest.json  popup.html  popup.js
smartban-front/: background.js  manifest.json  popup.html  popup.js
smartban-lib/: Cargo.toml
smartban-lib/src/: lib.rs  smartban.rs
smartban-lib/src/smartban/: console_logger.rs  faceit_api_client.rs  faceit_api_deserializer.rs
