[package]
name = "smartban-lib"
version = "0.4.0"
authors = ["Kuchpio kuchpio@gmail.com"]
description = "Wasm library for `smartban` chrome extention."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["json"]}
futures = "0.3"
tokio = { version = "1.30.0", features = ["full"]}
